src/objects/z_Feature_1_Object__c.object
<CustomObject>
    <description>Test for Jenkins</description>
    <fields>
        <fullName>zFeature_1_Field_1__c</fullName>
        <description>Test</description>
        <inlineHelpText>Test</inlineHelpText>
        <label>zFeature-1 Field-1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zFeature_1_Field_2__c</fullName>
        <description>Test</description>
        <inlineHelpText>Test</inlineHelpText>
        <label>zFeature-1 Field-2</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zFeature_1_Field_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>z Feature-1 List</relationshipLabel>
        <relationshipName>z_Feature_1_Account</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zFeature_1_Opportunity__c</fullName>
        <label>zFeature-1 Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>z Feature-1 Object</relationshipLabel>
        <relationshipName>z_Feature_1_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>z Feature-1 Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>z Feature-1 Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>z Feature-1 Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>